<?xml version="1.0" encoding="UTF-8"?><resources><string name="module848string0">module848string0</string>
<string name="module848string1">module848string1</string>
<string name="module848string2">module848string2</string>
<string name="module848string3">module848string3</string>
<string name="module848string4">module848string4</string>
<string name="module848string5">module848string5</string>
<string name="module848string6">module848string6</string>
<string name="module848string7">module848string7</string>
<string name="module848string8">module848string8</string>
<string name="module848string9">module848string9</string>
<string name="module848string10">module848string10</string>
<string name="module848string11">module848string11</string>
<string name="module848string12">module848string12</string>
<string name="module848string13">module848string13</string>
<string name="module848string14">module848string14</string>
<string name="module848string15">module848string15</string>
<string name="module848string16">module848string16</string>
<string name="module848string17">module848string17</string>
<string name="module848string18">module848string18</string>
<string name="module848string19">module848string19</string>
<string name="module848string20">module848string20</string>
<string name="module848string21">module848string21</string>
<string name="module848string22">module848string22</string>
<string name="module848string23">module848string23</string>
<string name="module848string24">module848string24</string>
<string name="module848string25">module848string25</string>
<string name="module848string26">module848string26</string>
<string name="module848string27">module848string27</string>
<string name="module848string28">module848string28</string>
<string name="module848string29">module848string29</string>
<string name="module848string30">module848string30</string>
<string name="module848string31">module848string31</string>
<string name="module848string32">module848string32</string>
<string name="module848string33">module848string33</string>
<string name="module848string34">module848string34</string>
<string name="module848string35">module848string35</string>
<string name="module848string36">module848string36</string>
<string name="module848string37">module848string37</string>
<string name="module848string38">module848string38</string>
<string name="module848string39">module848string39</string>
<string name="module848string40">module848string40</string>
<string name="module848string41">module848string41</string>
<string name="module848string42">module848string42</string>
<string name="module848string43">module848string43</string>
<string name="module848string44">module848string44</string>
<string name="module848string45">module848string45</string>
<string name="module848string46">module848string46</string>
<string name="module848string47">module848string47</string>
<string name="module848string48">module848string48</string>
<string name="module848string49">module848string49</string>
<string name="module848string50">module848string50</string>
<string name="module848string51">module848string51</string>
<string name="module848string52">module848string52</string>
<string name="module848string53">module848string53</string>
<string name="module848string54">module848string54</string>
<string name="module848string55">module848string55</string>
<string name="module848string56">module848string56</string>
<string name="module848string57">module848string57</string>
<string name="module848string58">module848string58</string>
<string name="module848string59">module848string59</string>
<string name="module848string60">module848string60</string>
<string name="module848string61">module848string61</string>
<string name="module848string62">module848string62</string>
<string name="module848string63">module848string63</string>
<string name="module848string64">module848string64</string>
<string name="module848string65">module848string65</string>
<string name="module848string66">module848string66</string>
<string name="module848string67">module848string67</string>
<string name="module848string68">module848string68</string>
<string name="module848string69">module848string69</string>
<string name="module848string70">module848string70</string>
<string name="module848string71">module848string71</string>
<string name="module848string72">module848string72</string>
<string name="module848string73">module848string73</string>
<string name="module848string74">module848string74</string>
<string name="module848string75">module848string75</string>
<string name="module848string76">module848string76</string>
</resources>